@startuml transcription-state
title Transcription state machine\n(MenuBar / WhisperProcessManager / PowerMonitor / TranscriptionScheduler)

skinparam state {
  BackgroundColor<<auto>>   #E8F1FF
  BackgroundColor<<manual>> #FFF6E0
  BackgroundColor<<paused>> #FFE0E0
  BackgroundColor<<locked>> #E6FFE6
}

[*] --> Restore

state "Restore + Settle" as Restore
note right of Restore
  On launch: read saved (state, wasOn) from
  UserDefaults, then transition to the row
  matched by current hour / battery.
  Battery wins over inside-workday.

  | saved \ now      | inside workday & AC | inside workday & battery | off-hours & AC      | off-hours & battery |
  |------------------|---------------------|---------------------------|---------------------|---------------------|
  | Off              | OnWorkday (settle)  | Battery (wasOn=false)     | Off                 | Battery (wasOn=false)|
  | On               | OnWorkday           | Battery (wasOn=true)      | On                  | Battery (wasOn=true)|
  | OnWorkday        | OnWorkday           | Battery (wasOn=false)     | Off (settle 18:00)  | Battery (wasOn=false)|
  | Battery wasOn    | OnWorkday           | Battery (wasOn=true)      | On                  | Battery (wasOn=true)|
  | Battery !wasOn   | OnWorkday           | Battery (wasOn=false)     | Off                 | Battery (wasOn=false)|
end note

Restore --> Off       : saved=Off OR\n(saved=OnWorkday & off-hours & on AC) OR\n(saved=Battery & !wasOn & off-hours & on AC)
Restore --> On        : (saved=On OR saved=Battery&wasOn) &\noff-hours & on AC
Restore --> OnWorkday : inside workday & on AC\n(any saved state except Off-on-battery)
Restore --> Battery   : on battery\n(wasOn from saved: On→true, OnWorkday→false,\nOff→false, Battery→preserved)

state "Off" as Off <<manual>> {
  Off : whisper stopped
  Off : menu item: "Start Transcribing"
  Off : menu bar icon: stopped
}

state "On" as On <<manual>> {
  On : whisper running
  On : menu item: "Stop Transcribing"
  On : menu bar icon: <source-device>
}

state "OnWorkday" as OnWorkday <<locked>> {
  OnWorkday : whisper running (heartbeat restarts if it dies)
  OnWorkday : menu item: "🔒 Transcribing 9–18" (disabled)
  OnWorkday : menu bar icon: <source-device>
}

state "Battery" as Battery <<paused>> {
  Battery : whisper stopped
  Battery : menu: "Off - On Battery" (disabled)
  Battery : menu bar icon: leaf
  Battery : flag: wasOn
}

' ── User clicks menu item (outside lock window) ───────────────────
Off --> On    : clicks "Start Transcribing"
On --> Off    : clicks "Stop Transcribing"

' ── Schedule (Mon–Fri) & heartbeat ────────────────────────────────
Off --> OnWorkday        : inside workday & on AC\n(09:00 entry / 60s heartbeat /\nAC restored mid-workday)
On --> OnWorkday         : 09:00 Mon–Fri\n(enter workday window)
OnWorkday --> Off        : 18:00 Mon–Fri

OnWorkday --> OnWorkday  : 60s heartbeat —\nrestart Whisper if it died

' ── Battery / AC ──────────────────────────────────────────────────
On --> Battery           : switch to battery\n(set wasOn=true)
OnWorkday --> Battery    : switch to battery\n(wasOn=false)
Off --> Battery          : switch to battery\n(wasOn=false)
Battery --> OnWorkday    : switch to AC\n[inside workday window]\n(auto-resume)
Battery --> On           : switch to AC\n[outside workday & wasOn]\n(auto-resume off-hours)
Battery --> Off          : switch to AC\n[outside workday & !wasOn]\n(no auto-resume)
Battery --> Battery      : 09:00 / 18:00 (no-op,\nwasOn preserved)

' ── Test endpoints (TabletHttpServer) ─────────────────────────────
note bottom of OnWorkday
  /test/transcription/stop is dropped
  inside the lock window (logs 🔒)
  /test/transcription/start is honored
  (recovery after crash)
end note


@enduml
